Bug 51678 - [Regression] Clickdot fullscreen and click leads to weston crash
Summary: [Regression] Clickdot fullscreen and click leads to weston crash
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: high critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-02 18:40 UTC by ZhaoShengyan
Modified: 2012-07-10 05:18 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description ZhaoShengyan 2012-07-02 18:40:32 UTC
System Environment:
--------------------------
Arch:     i386
Libdrm:  (master)libdrm-2.4.37 1b1a4f0a779f7ab2ba5673b9c9fe2a37047fe765
Wayland: (master)d2bcffc470cf37dbdeb4d1ed46819360c16d92eb
Mesa:    (master)1d21bd057a6b1701dd44a79e82259c0f3ded2b70
Xserver: (master)
xorg-server-1.12.0-233-gdae317e7265007b38012244722e3b3a06e904ed5
Xf86_video_intel: 2.19.0-368-g543816011d05f0cf40b05ec58f87a5954397a224
Cairo:   (master) dbc0efad7e565558a3abf7f69d7675efddc4688d
Cairo_gl: (master) 64d65f72e5dbc1d9fa2cb4738d93eadc7fd5d7c0
Xkbcommon: (master) 2cb6c35b8788add691ef619a6111c6e67b252089
Weston:  (master) 0fe782bdb5f95fc4d9712d0a77df517edfc6be39
Kernel_unstable: (drm-intel-next-queued)
146937e5828ede495e11ba3a6f4a01b36b7166dc

Bug detailed description:
-----------------------------
Start weston under drm mode, then run clickdot. Fullscreen clickdot window, Click any place, then weston crash with the following info:
[09:32:38.955] caught segv
[09:32:38.955]   [000000000804d39a]  --  (./weston)
[09:32:38.955]   [00000000b770440c]  __kernel_rt_sigreturn  ()
[09:32:38.955]   [00000000b6380e9b]  --  (/opt/X11R7/lib/weston/desktop-shell.so)
[09:32:38.955]   [00000000b63830a2]  --  (/opt/X11R7/lib/weston/desktop-shell.so)
[09:32:38.955]   [0000000008055c63]  weston_compositor_run_button_binding  (./weston)
[09:32:38.955]   [0000000008051191]  notify_button  (./weston)
[09:32:38.955]   [00000000b768f981]  --  (/opt/X11R7/lib/weston/drm-backend.so)
[09:32:38.955]   [00000000b76904ec]  --  (/opt/X11R7/lib/weston/drm-backend.so)
[09:32:38.955]   [00000000b76905a2]  --  (/opt/X11R7/lib/weston/drm-backend.so)
[09:32:38.955]   [00000000b76c2582]  --  (/opt/X11R7/lib/libwayland-server.so.0)
[09:32:38.955]   [00000000b76c2dca]  wl_event_loop_dispatch  (/opt/X11R7/lib/libwayland-server.so.0)
[09:32:38.955]   [000000000804dedd]  --  (./weston)
[09:32:38.955]   [00000000b76c2582]  --  (/opt/X11R7/lib/libwayland-server.so.0)
[09:32:38.955]   [00000000b76c2dca]  wl_event_loop_dispatch  (/opt/X11R7/lib/libwayland-server.so.0)
[09:32:38.955]   [00000000b76c0a62]  wl_display_run  (/opt/X11R7/lib/libwayland-server.so.0)
[09:32:38.955]   [000000000804cdcf]  --  (./weston)
[09:32:38.956]   [00000000466373f3]  __libc_start_main  (/lib/libc.so.6)
[09:32:38.956]   [000000000804cf0d]  --  (./weston)
[09:32:38.956] libwayland: disconnect from client 0x8a51ce8
read error: No such file or directory

The bug can be reproduced both under drm mode and X mode.

Reproduce steps:
----------------------------
1. Start weston.
2. Start clickdot.
3. Fullscreen clickdot window.
4. Click any place.
Comment 1 ZhaoShengyan 2012-07-02 18:43:30 UTC
Backtrace:
(gdb) bt
#0  center_on_output (surface=0x81ea900, output=0x8137d00) at shell.c:2515
#1  0xb6c7e0a2 in shell_configure_fullscreen (shsurf=0x81eab08) at shell.c:1404
#2  0x08055c63 in weston_compositor_run_button_binding (compositor=0x805dec0,
    seat=0x8136e08, time=1249774472, button=272,
    state=WL_POINTER_BUTTON_STATE_PRESSED) at util.c:465
#3  0x08051191 in notify_button (seat=0x8136e08, time=1249774472, button=272,
    state=WL_POINTER_BUTTON_STATE_PRESSED) at compositor.c:1722
#4  0xb7f8a981 in evdev_process_key (time=1249774472, e=0xbfffea90,
    device=0x81ef640) at evdev.c:81
#5  fallback_process (dispatch=0x8162f98, device=0x81ef640, event=0xbfffea90,
    time=1249774472) at evdev.c:279
#6  0xb7f8b4ec in evdev_process_events (count=3, ev=0xbfffea80,
    device=0x81ef640) at evdev.c:328
#7  evdev_input_device_data (fd=28, data=0x81ef640, mask=<optimized out>)
    at evdev.c:362
#8  0xb7f8b5a2 in evdev_input_device_data (fd=28, mask=1, data=0x81ef640)
    at evdev.c:343
#9  0xb7fbd582 in wl_event_source_fd_dispatch (source=0x81ef718, ep=0xbfffece4)
    at event-loop.c:79
#10 0xb7fbddca in wl_event_loop_dispatch (loop=0x805e598, timeout=0)
    at event-loop.c:410
#11 0x0804dedd in weston_compositor_read_input (fd=13, mask=1, data=0x805dec0)
    at compositor.c:1137
Comment 2 ZhaoShengyan 2012-07-02 19:03:51 UTC
Actually, this is a fullcreen issue, cause this crash phenomenon can be reproduced with resizor, weston-terminal, eventdemo and etc only by fullcreen and click.
Comment 3 ZhaoShengyan 2012-07-03 00:14:30 UTC
The first bad commit is at Weston module:

commit 730c94d62ec56a4621d35c1f4837a84a3b627111
Author:     Kristian H<C3><B8>gsberg <krh@bitplanet.net>
AuthorDate: Tue Jun 26 21:44:35 2012 -0400
Commit:     Kristian H<C3><B8>gsberg <krh@bitplanet.net>
CommitDate: Wed Jun 27 10:24:21 2012 -0400

    shell: Make the lock surface just a plain wl_surface too
Comment 4 min2 2012-07-04 13:57:47 UTC
Hello. I can't reproduce this issue. 

I have tried both in drm and X11 mode, tried several programs (dnd, terminal, eventdemo, clickdot) select Fulscreen from menu, etc. and nothing (all ok for me)

My versions

cairo:               1.12.2-106-g64d65f7
drm:                 libdrm-2.4.36-4-g8fad46b
glproto:             glproto-1.4.15-2-g458a9eb
libvpx:              v1.1.0-126-geab09e3
libxkbcommon:        2cb6c35
mesa:                snb-magic-10742-ge620f3e
pixman:              pixman-0.26.0-43-g4cdf8e9
wayland:             0.94.90-16-g8a02368
weston:              0.94.90-33-gdaf1aec
xf86-video-intel:    2.17.0-959-gf6f43a7
xserver:             xorg-server-1.12.2-92-gfc6979c

Thanks,
Comment 5 Scott Moreau 2012-07-04 17:29:03 UTC
I tried also tried to reproduce this but could not. Can you possibly post
the 'bt full' for this crash?


Scott
Comment 6 ZhaoShengyan 2012-07-09 01:47:51 UTC
(In reply to comment #4)
> Hello. I can't reproduce this issue. 
> I have tried both in drm and X11 mode, tried several programs (dnd, terminal,
> eventdemo, clickdot) select Fulscreen from menu, etc. and nothing (all ok for
> me)
> My versions
> cairo:               1.12.2-106-g64d65f7
> drm:                 libdrm-2.4.36-4-g8fad46b
> glproto:             glproto-1.4.15-2-g458a9eb
> libvpx:              v1.1.0-126-geab09e3
> libxkbcommon:        2cb6c35
> mesa:                snb-magic-10742-ge620f3e
> pixman:              pixman-0.26.0-43-g4cdf8e9
> wayland:             0.94.90-16-g8a02368
> weston:              0.94.90-33-gdaf1aec
> xf86-video-intel:    2.17.0-959-gf6f43a7
> xserver:             xorg-server-1.12.2-92-gfc6979c
> Thanks,

I retried based on the version listed above and still got the bug reproduced.
btw. after you fullscreen clickdot, did you click in it? the crash happened only after click.
Comment 7 ZhaoShengyan 2012-07-09 01:52:07 UTC
(In reply to comment #5)
> I tried also tried to reproduce this but could not. Can you possibly post
> the 'bt full' for this crash?
> Scott

bt full:
#0  center_on_output (surface=0x81b7c88, output=0x8137c70) at shell.c:2515
        mode = 0x8147b18
#1  0xb6cad092 in shell_configure_fullscreen (shsurf=0x81b7e90) at shell.c:1404
        output = 0x8137c70
        surface = 0x81b7c88
        matrix = <optimized out>
        scale = <optimized out>
#2  0x08055c63 in weston_compositor_run_button_binding (compositor=0x805dec0, seat=0x8136ab0, time=1768548079, button=272, state=WL_POINTER_BUTTON_STATE_PRESSED) at util.c:465
        handler = <optimized out>
        b = <optimized out>
#3  0x08051191 in notify_button (seat=0x8136ab0, time=1768548079, button=272, state=WL_POINTER_BUTTON_STATE_PRESSED) at compositor.c:1722
        ws = 0x8136ab0
        compositor = 0x805dec0
        focus = 0x81b7c88
        serial = <optimized out>
#4  0xb7f8a981 in evdev_process_key (time=1768548079, e=0xbfffea90, device=0x820fcd8) at evdev.c:81
No locals.
#5  fallback_process (dispatch=0x816d9b0, device=0x820fcd8, event=0xbfffea90, time=1768548079) at evdev.c:279
No locals.
#6  0xb7f8b4ec in evdev_process_events (count=3, ev=0xbfffea80, device=0x820fcd8) at evdev.c:328
        dispatch = 0x816d9b0
        e = 0xbfffea90
        end = 0xbfffeab0
        time = 1768548079
#7  evdev_input_device_data (fd=28, data=0x820fcd8, mask=<optimized out>) at evdev.c:362
        ev = {{time = {tv_sec = 1341798344, tv_usec = 431258}, type = 4, code = 4, value = 589825}, {time = {tv_sec = 1341798344, tv_usec = 431259}, type = 1, code = 272,
            value = 1}, {time = {tv_sec = 1341798344, tv_usec = 431263}, type = 0, code = 0, value = 0}, {time = {tv_sec = 5120, tv_usec = -1073747192}, type = 1280, code = 0,
            value = 1024}, {time = {tv_sec = 1, tv_usec = 32993}, type = 5121, code = 0, value = -1248935936}, {time = {tv_sec = 134702556, tv_usec = 5121}, type = 0,
            code = 0, value = 134702556}, {time = {tv_sec = -1248935936, tv_usec = 0}, type = 1, code = 256, value = 1}, {time = {tv_sec = 0, tv_usec = 6}, type = 0, code = 0,
            value = 2}, {time = {tv_sec = -1212849579, tv_usec = 0}, type = 49152, code = 46398, value = 5120}, {time = {tv_sec = 1280, tv_usec = 1024}, type = 3351,
            code = 46985, value = -1212147852}, {time = {tv_sec = 2, tv_usec = 136355760}, type = 1280, code = 0, value = -1212846183}, {time = {tv_sec = 0, tv_usec = 0},
            type = 0, code = 0, value = 1280}, {time = {tv_sec = 1024, tv_usec = 1}, type = 32993, code = 0, value = 5121}, {time = {tv_sec = -1248935936,
              tv_usec = 134702556}, type = 20373, code = 47009, value = -1248935936}, {time = {tv_sec = 134702556, tv_usec = 134640904}, type = 3553, code = 0, value = 32993},
          {time = {tv_sec = -1215839379, tv_usec = 134679392}, type = 32993, code = 0, value = 32993}, {time = {tv_sec = -1215839183, tv_usec = 134679392}, type = 32993,
            code = 0, value = 32993}, {time = {tv_sec = -1213120868, tv_usec = 5}, type = 5, code = 0, value = -1215848655}, {time = {tv_sec = -1215833040,
              tv_usec = 134639756}, type = 32944, code = 2075, value = 0}, {time = {tv_sec = 0, tv_usec = -1213120868}, type = 0, code = 0, value = -1215847957}, {time = {
              tv_sec = 3553, tv_usec = -1216232920}, type = 16028, code = 47025, value = -1213120868}, {time = {tv_sec = 134679392, tv_usec = 134679392}, type = 2, code = 0,
            value = -1215843027}, {time = {tv_sec = 134639756, tv_usec = 2}, type = 40880, code = 2080, value = 0}, {time = {tv_sec = 0, tv_usec = 0}, type = 64640,
            code = 18024, value = 1024}, {time = {tv_sec = 1, tv_usec = 1182430176}, type = 0, code = 0, value = 1182430224}, {time = {tv_sec = 1182430224,
              tv_usec = 1182484351}, type = 29708, code = 18042, value = 1182179469}, {time = {tv_sec = 1182425076, tv_usec = 64}, type = 29664, code = 18042,
            value = -1073746488}, {time = {tv_sec = 1181291226, tv_usec = 0}, type = 58776, code = 1, value = 136020144}, {time = {tv_sec = 13, tv_usec = -1073746860},
            type = 32, code = 0, value = -1213120868}, {time = {tv_sec = 134679392, tv_usec = 3553}, type = 1656, code = 0, value = 9998}, {time = {tv_sec = 1224,
              tv_usec = 0}, type = 29712, code = 18042, value = 1182430232}, {time = {tv_sec = 1220, tv_usec = 136274744}, type = 44, code = 0, value = 3}}
        len = 48
#8  0xb7f8b5a2 in evdev_input_device_data (fd=28, mask=1, data=0x820fcd8) at evdev.c:343
        ec = <optimized out>
        device = 0x820fcd8
#9  0xb7fbd582 in wl_event_source_fd_dispatch (source=0x816a0d8, ep=0xbfffece4) at event-loop.c:79
        fd_source = 0x816a0d8
        mask = <optimized out>
#10 0xb7fbddca in wl_event_loop_dispatch (loop=0x805e598, timeout=0) at event-loop.c:410
        ep = {{events = 1, data = {ptr = 0x816a0d8, fd = 135700696, u32 = 135700696, u64 = 135700696}}, {events = 136260640, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {
            events = 56, data = {ptr = 0x500, fd = 1280, u32 = 1280, u64 = 4398046512384}}, {events = 32993, data = {ptr = 0x30, fd = 48, u32 = 48, u64 = 30064771120}}, {
            events = 1, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 13257444830109237248}}, {events = 1181289214, data = {ptr = 0x46693970, fd = 1181301104, u32 = 1181301104,
              u64 = 14066202992}}, {events = 3086759844, data = {ptr = 0x81f1890, fd = 136255632, u32 = 136255632, u64 = 585234958308546704}}, {events = 3086782260, data = {
              ptr = 0xb7fbf81b, fd = -1208223717, u32 = 3086743579, u64 = 3086743579}}, {events = 136260828, data = {ptr = 0x467a5ff4, fd = 1182425076, u32 = 1182425076,
              u64 = 13257532581768486900}}, {events = 135443056, data = {ptr = 0x816a470, fd = 135701616, u32 = 135701616, u64 = 13257374345536644208}}, {events = 135443080,
            data = {ptr = 0x10, fd = 16, u32 = 16, u64 = 581723495990296592}}, {events = 135701616, data = {ptr = 0x816a470, fd = 135701616, u32 = 135701616,
              u64 = 584197500367709296}}, {events = 136019080, data = {ptr = 0x804d8b8, fd = 134535352, u32 = 134535352, u64 = 582834002868885688}}, {events = 135443056,
            data = {ptr = 0x4674960f, fd = 1182045711, u32 = 1182045711, u64 = 13257532581768107535}}, {events = 1, data = {ptr = 0x8070ad8, fd = 134679256, u32 = 134679256,
              u64 = 585255556970121944}}, {events = 135443056, data = {ptr = 0x46a88f89, fd = 1185451913, u32 = 1185451913, u64 = 5091503908902702985}}, {events = 134535264,
            data = {ptr = 0x46a8a7d4, fd = 1185458132, u32 = 1185458132, u64 = 577824560224184276}}, {events = 1185453740, data = {ptr = 0x46a89463, fd = 1185453155,
              u32 = 1185453155, u64 = 577824560224179299}}, {events = 136019556, data = {ptr = 0x812b298, fd = 135443096, u32 = 135443096, u64 = 68854919832}}, {
            events = 3221220872, data = {ptr = 0x46690067, fd = 1181286503, u32 = 1181286503, u64 = 5091477159842218087}}, {events = 3221220848, data = {ptr = 0xc, fd = 12,
              u32 = 12, u64 = 12}}, {events = 3221220908, data = {ptr = 0x804d860, fd = 134535264, u32 = 134535264, u64 = 578114675624171616}}, {events = 134602432, data = {
              ptr = 0x16230, fd = 90672, u32 = 90672, u64 = 90672}}, {events = 0, data = {ptr = 0xbfffee10, fd = -1073746416, u32 = 3221220880, u64 = 7516188176}}, {
            events = 3221220616, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {events = 136267028, data = {ptr = 0x30, fd = 48, u32 = 48, u64 = 584197500232007728}}, {
            events = 3086743579, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {events = 135494900, data = {ptr = 0xb7fc37a4, fd = -1208207452, u32 = 3086759844,
              u64 = 11676694436}}, {events = 3221221096, data = {ptr = 0x1, fd = 1, u32 = 1, u64 = 13257377321813278721}}, {events = 136262432, data = {ptr = 0x2, fd = 2,
              u32 = 2, u64 = 577824559038726146}}, {events = 135701616, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {events = 0, data = {ptr = 0x46690067, fd = 1181286503,
              u32 = 1181286503, u64 = 1181286503}}}
        source = <optimized out>
        i = <optimized out>
        count = 1
        n = -1073746712
#11 0x0804dedd in weston_compositor_read_input (fd=13, mask=1, data=0x805dec0) at compositor.c:1137
        compositor = 0x805dec0
#12 0xb7fbd582 in wl_event_source_fd_dispatch (source=0x81f2310, ep=0xbfffeee4) at event-loop.c:79
        fd_source = 0x81f2310
        mask = <optimized out>
#13 0xb7fbddca in wl_event_loop_dispatch (loop=0x805d4d0, timeout=-1) at event-loop.c:410
        ep = {{events = 1, data = {ptr = 0x81f2310, fd = 136258320, u32 = 136258320, u64 = 136258320}}, {events = 4, data = {ptr = 0x816a4c8, fd = 135701704, u32 = 135701704,
              u64 = 135701704}}, {events = 3086709632, data = {ptr = 0x7, fd = 7, u32 = 7, u64 = 184683593735}}, {events = 97, data = {ptr = 0xb5e4e1d1, fd = -1243291183,
              u32 = 3051676113, u64 = 5071527914796016081}}, {events = 95364878, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 13257325992659124224}}, {events = 3086709968,
            data = {ptr = 0x2b, fd = 43, u32 = 43, u64 = 416611827755}}, {events = 134618536, data = {ptr = 0x8049a39, fd = 134519353, u32 = 134519353,
              u64 = 43930390221855289}}, {events = 0, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {events = 111, data = {ptr = 0x0, fd = 0, u32 = 0,
              u64 = 13257867708294234112}}, {events = 3086714211, data = {ptr = 0xb7fb7ef0, fd = -1208254736, u32 = 3086712560, u64 = 13257325995745836784}}, {events = 1,
            data = {ptr = 0x4661afc4, fd = 1180807108, u32 = 1180807108, u64 = 13257869599260651460}}, {events = 3221221472, data = {ptr = 0xbffff038, fd = -1073745864,
              u32 = 3221221432, u64 = 5071153106054541368}}, {events = 3221221412, data = {ptr = 0xb7fb7bc0, fd = -1208255552, u32 = 3086711744, u64 = 13835040517722438592}}, {
            events = 1180809812, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {events = 1, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {events = 3086837872,
            data = {ptr = 0xbffff02c, fd = -1073745876, u32 = 3221221420, u64 = 5071539528557129772}}, {events = 0, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {
            events = 0, data = {ptr = 0x1, fd = 1, u32 = 1, u64 = 5071538030687289345}}, {events = 1180809464, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {
            events = 134519353, data = {ptr = 0xbffff060, fd = -1073745824, u32 = 3221221472, u64 = 585642107113304160}}, {events = 1180761232, data = {ptr = 0x0, fd = 0,
              u32 = 0, u64 = 13257867708294234112}}, {events = 0, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 13257336588343443456}}, {events = 3221221504, data = {
              ptr = 0xb7fd65a0, fd = -1208130144, u32 = 3086837152, u64 = 585642106978919840}}, {events = 3221221388, data = {ptr = 0x4661b8f8, fd = 1180809464,
              u32 = 1180809464, u64 = 1180809464}}, {events = 4294967295, data = {ptr = 0x8049bf0, fd = 134519792, u32 = 134519792, u64 = 13257325992793644016}}, {
            events = 3086837872, data = {ptr = 0x1, fd = 1, u32 = 1, u64 = 578063479479468033}}, {events = 1180737616, data = {ptr = 0x4661bab0, fd = 1180809904,
              u32 = 1180809904, u64 = 18446744070595394224}}, {events = 1, data = {ptr = 0x4661afc4, fd = 1180807108, u32 = 1180807108, u64 = 13257867709475041220}}, {
            events = 1, data = {ptr = 0xb7fc3720, fd = -1208207584, u32 = 3086759712, u64 = 5071229448963766048}}, {events = 3086838312, data = {ptr = 0x0, fd = 0, u32 = 0,
              u64 = 4294967296}}, {events = 1, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 13257313073397497856}}, {events = 51400, data = {ptr = 0x0, fd = 0, u32 = 0,
              u64 = 13257325992659124224}}}
        source = <optimized out>
              u64 = 43930390221855289}}, {events = 0, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {events = 111, data = {ptr = 0x0, fd = 0, u32 = 0,
              u64 = 13257867708294234112}}, {events = 3086714211, data = {ptr = 0xb7fb7ef0, fd = -1208254736, u32 = 3086712560, u64 = 13257325995745836784}}, {events = 1,
            data = {ptr = 0x4661afc4, fd = 1180807108, u32 = 1180807108, u64 = 13257869599260651460}}, {events = 3221221472, data = {ptr = 0xbffff038, fd = -1073745864,
              u32 = 3221221432, u64 = 5071153106054541368}}, {events = 3221221412, data = {ptr = 0xb7fb7bc0, fd = -1208255552, u32 = 3086711744, u64 = 13835040517722438592}}, {
            events = 1180809812, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {events = 1, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {events = 3086837872,
            data = {ptr = 0xbffff02c, fd = -1073745876, u32 = 3221221420, u64 = 5071539528557129772}}, {events = 0, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 4294967296}}, {
            events = 0, data = {ptr = 0x1, fd = 1, u32 = 1, u64 = 5071538030687289345}}, {events = 1180809464, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 0}}, {
            events = 134519353, data = {ptr = 0xbffff060, fd = -1073745824, u32 = 3221221472, u64 = 585642107113304160}}, {events = 1180761232, data = {ptr = 0x0, fd = 0,
              u32 = 0, u64 = 13257867708294234112}}, {events = 0, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 13257336588343443456}}, {events = 3221221504, data = {
              ptr = 0xb7fd65a0, fd = -1208130144, u32 = 3086837152, u64 = 585642106978919840}}, {events = 3221221388, data = {ptr = 0x4661b8f8, fd = 1180809464,
              u32 = 1180809464, u64 = 1180809464}}, {events = 4294967295, data = {ptr = 0x8049bf0, fd = 134519792, u32 = 134519792, u64 = 13257325992793644016}}, {
            events = 3086837872, data = {ptr = 0x1, fd = 1, u32 = 1, u64 = 578063479479468033}}, {events = 1180737616, data = {ptr = 0x4661bab0, fd = 1180809904,
              u32 = 1180809904, u64 = 18446744070595394224}}, {events = 1, data = {ptr = 0x4661afc4, fd = 1180807108, u32 = 1180807108, u64 = 13257867709475041220}}, {
            events = 1, data = {ptr = 0xb7fc3720, fd = -1208207584, u32 = 3086759712, u64 = 5071229448963766048}}, {events = 3086838312, data = {ptr = 0x0, fd = 0, u32 = 0,
              u64 = 4294967296}}, {events = 1, data = {ptr = 0x0, fd = 0, u32 = 0, u64 = 13257313073397497856}}, {events = 51400, data = {ptr = 0x0, fd = 0, u32 = 0,
              u64 = 13257325992659124224}}}
        source = <optimized out>
---Type <return> to continue, or q <return> to quit---
        i = <optimized out>
        count = 1
        n = -1073746200
#14 0xb7fbba62 in wl_display_run (display=0x805d4a0) at wayland-server.c:1090
No locals.
#15 0x0804cdcf in main (argc=<optimized out>, argv=0xbffff4b4) at compositor.c:3393
        ret = 0
        display = 0x805d4a0
        ec = 0x805dec0
        signals = {0x805d510, 0x805d538, 0x805d560, 0x805d588}
        loop = <optimized out>
        segv_action = {__sigaction_handler = {sa_handler = 0x804d370 <on_segv_signal>, sa_sigaction = 0x804d370 <on_segv_signal>}, sa_mask = {__val = {0 <repeats 32 times>}},
          sa_flags = -2147483644, sa_restorer = 0x46735bac <_dl_addr+652>}
        shell_module = 0x1
        backend_module = 0x804ba25
        xserver_module = 0x0
        module_init = <optimized out>
        backend_init = <optimized out>
        i = <optimized out>
        backend = 0x8057328 "drm-backend.so"
        shell = 0x8057265 "desktop-shell.so"
        module = 0x0
        log = 0x0
        idle_time = 300
        xserver = 0
        socket_name = 0x0
        config_file = <optimized out>
        shell_config_keys = {{name = 0x805815e "type", type = CONFIG_KEY_STRING, data = 0xbffff3e8}}
        cs = {{name = 0x8057276 "shell", keys = 0xbffff3cc, num_keys = 1, done = 0}}
        core_options = {{type = WESTON_OPTION_STRING, name = 0x805727c "backend", short_name = 66, data = 0xbffff3e4}, {type = WESTON_OPTION_STRING, name = 0x8057284 "socket",
            short_name = 83, data = 0xbffff3fc}, {type = WESTON_OPTION_INTEGER, name = 0x805728b "idle-time", short_name = 105, data = 0xbffff3f4}, {
            type = WESTON_OPTION_BOOLEAN, name = 0x8057295 "xserver", short_name = 0, data = 0xbffff3f8}, {type = WESTON_OPTION_STRING, name = 0x805729d "module",
            short_name = 0, data = 0xbffff3ec}, {type = WESTON_OPTION_STRING, name = 0x80572a4 "log", short_name = 0, data = 0xbffff3f0}}
Comment 8 Kristian Høgsberg 2012-07-10 01:50:10 UTC
Should be fixed in e4d3a2bce6ac6686472783b09929a7c3956f7848
Comment 9 ZhaoShengyan 2012-07-10 05:18:00 UTC
The issue has been settled at version:dd263e546bc20a2a7f424374afc9c81e5f59f2de

Marked as Verified and Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.